--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-copy": "~0.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
