--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-compress": "~0.4.7"
+    "grunt-contrib-compress": "~0.4.7",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-coffeelint": "0.0.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
