Initial support for AtomEditor

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-compress": "~0.4.7",
     "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-coffeelint": "0.0.7"
   },
   "scripts": {
