add support for 'grunt watch' to make life easier

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-compress": "~0.4.7",
     "grunt-contrib-coffee": "~0.7.0",
-    "grunt-coffeelint": "0.0.7"
+    "grunt-coffeelint": "0.0.7",
+    "grunt-contrib-watch": "~0.6.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
