--- a/package.json
+++ b/package.json
@@ -1,16 +1,43 @@
 {
   "name": "firepad",
+  "description": "Collaborative text editing powered by Firebase",
   "version": "0.1.4",
-  "author": "Michael Lehenbauer <michael@firebase.com>",
-  "description": "Collaborative Text Editing powered by Firebase",
-  "main": "dist/firepad.js",
-  "directories": {
-    "test": "test",
-    "lib": "lib"
+  "author": "Firebase <support@firebase.com> (https://www.firebase.com/)",
+  "contributors": [
+    "Michael Lehenbauer <michael@firebase.com>"
+  ],
+  "homepage": "http://www.firepad.io/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/firebase/firepad.git"
   },
+  "bugs": {
+    "url": "https://github.com/firebase/firepad/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://firebase.mit-license.org/"
+    }
+  ],
+  "keywords": [
+    "text",
+    "word",
+    "editor",
+    "firebase",
+    "realtime",
+    "collaborative"
+  ],
+  "main": "dist/firepad-min.js",
+  "files": [
+    "dist/**",
+    "LICENSE",
+    "README.md",
+    "CHANGELOG.md"
+  ],
   "dependencies": {
-    "firebase": "1.0.x",
-    "jsdom":    "0.10.x"
+    "jsdom": "0.10.x",
+    "firebase": "1.0.x"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -20,15 +47,13 @@
     "grunt-contrib-compress": "~0.4.7",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-coffeelint": "0.0.7",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "karma": "^0.12.16",
+    "grunt-karma": "^0.8.3",
+    "karma-jasmine": "~0.1.3",
+    "karma-phantomjs-launcher": "~0.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/firebase/firepad.git"
-  },
-  "author": "Firebase",
-  "license": "MIT"
+    "test": "grunt test"
+  }
 }
