--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "firebase": "1.0.x"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "~0.4.5",
+    "grunt-cli": "0.1.13",
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-copy": "~0.4.1",
