--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
     "karma": "^0.12.16",
     "grunt-karma": "^0.8.3",
     "karma-jasmine": "~0.1.3",
+    "karma-failed-reporter": "0.0.2",
     "karma-phantomjs-launcher": "~0.1.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt"
   }
 }
