Repo cleanup to comply with new catapult deploy process
- Renamed `firepad-min.js` to `firepad.min.js` for consistency with
other libraries
- Added /dist/ folder to `.gitignore`
- Replaced references to version number with `0.0.0`
- Replaced all-release `CHANGELOG.md` with per-release `changelog.txt`
- Removed `release.sh` script
- Added `npm run travis` command to `package.json` to build the
distribution files before testing
- Updated and corrected things in the README
- Updated README build badge to only show state of `master` branch

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "firepad",
   "description": "Collaborative text editing powered by Firebase",
-  "version": "0.1.4",
+  "version": "0.0.0",
   "authors": [
     "Firebase <support@firebase.com> (https://www.firebase.com/)",
     "Michael Lehenbauer <michael@firebase.com>"
@@ -21,7 +21,7 @@
     "collaborative"
   ],
   "main": [
-    "dist/firepad-min.js",
+    "dist/firepad.min.js",
     "dist/firepad.css",
     "dist/firepad.eot"
   ],
@@ -35,7 +35,7 @@
     "bower_components",
     "Gruntfile.js",
     "package.json",
-    "release.sh"
+    "changelog.txt"
   ],
   "dependencies": {
     "jsdom": "0.10.x",
