--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "firepad",
   "description": "Collaborative text editing powered by Firebase",
+  "version": "0.0.0",
   "authors": [
     "Firebase <support@firebase.com> (https://www.firebase.com/)",
     "Michael Lehenbauer <michael@firebase.com>"
