--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "firebase": "2.x"
   },
   "devDependencies": {
+    "bower": "^1.4.1",
     "coveralls": "^2.11.2",
     "grunt": "~0.4.5",
     "grunt-cli": "0.1.13",
@@ -50,15 +51,19 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-karma": "^0.8.3",
+    "jasmine-core": "^2.3.4",
     "karma": "^0.12.16",
     "karma-coverage": "^0.2.6",
     "karma-failed-reporter": "0.0.2",
-    "karma-jasmine": "~0.1.3",
+    "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "~0.1.0",
     "karma-spec-reporter": "0.0.13"
   },
   "scripts": {
     "test": "grunt test",
-    "travis": "grunt"
+    "travis": "grunt",
+    "dev": "grunt watch",
+    "build": "grunt build",
+    "install": "bower install"
   }
 }
