loosen jsdom dependency
@mikelehen might want to bump npm version for this, jsdom 3.x doesn’t
play so hot on node 5.x

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "package.json"
   ],
   "dependencies": {
-    "jsdom": "3.x",
+    "jsdom": ">3",
     "firebase": "2.x"
   },
   "devDependencies": {
