--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Firebase <support@firebase.com> (https://www.firebase.com/)",
   "contributors": [
     "Michael Lehenbauer <michael@firebase.com>"
-  ],
+  ],karma-phantomjs-launcher
   "homepage": "http://www.firepad.io/",
   "repository": {
     "type": "git",
@@ -55,7 +55,7 @@
     "karma-coverage": "^0.2.6",
     "karma-failed-reporter": "0.0.2",
     "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "~0.1.0",
+    "karma-phantomjs-launcher": "~1.0.0",
     "karma-spec-reporter": "0.0.13"
   },
   "scripts": {
