--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "karma-coverage": "^0.2.6",
     "karma-failed-reporter": "0.0.2",
     "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "~0.1.0",
+    "phantomjs-prebuilt": "2.1.4",
+    "karma-phantomjs-launcher": "~1.0.0",
     "karma-spec-reporter": "0.0.13"
   },
   "scripts": {
