--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "Collaborative text editing powered by Firebase",
   "version": "0.0.0",
   "authors": [
-    "Firebase <support@firebase.com> (https://www.firebase.com/)",
+    "Firebase (https://firebase.google.com/)",
     "Michael Lehenbauer <michael@firebase.com>"
   ],
   "homepage": "http://www.firepad.io",
