--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "firepad",
   "description": "Collaborative text editing powered by Firebase",
   "version": "0.0.0",
-  "author": "Firebase <support@firebase.com> (https://www.firebase.com/)",
+  "author": "Firebase (https://firebase.google.com/)",
   "contributors": [
     "Michael Lehenbauer <michael@firebase.com>"
   ],
