Update monaco.html in examples

--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "package.json"
   ],
   "dependencies": {
+    "firebase": "^3 || ^4",
     "jsdom": ">3",
-    "firebase": "^3 || ^4"
+    "monaco-editor": "^0.13.1"
   },
   "devDependencies": {
     "coveralls": "^2.11.2",
