--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "karma-failed-reporter": "0.0.2",
     "karma-jasmine": "^1.1.2",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-spec-reporter": "0.0.13"
-    "monaco-editor": "^0.13.1",
+    "karma-spec-reporter": "0.0.13",
+    "monaco-editor": "^0.13.1"
   },
   "scripts": {
     "test": "grunt test",
