--- a/package.json
+++ b/package.json
@@ -39,28 +39,28 @@
     "package.json"
   ],
   "dependencies": {
-    "firebase": "^3 || ^4",
-    "jsdom": ">3"
+    "firebase": "*",
+    "jsdom": "^12.2.0"
   },
   "devDependencies": {
-    "coveralls": "^2.11.2",
-    "grunt": "~0.4.5",
-    "grunt-cli": "0.1.13",
-    "grunt-coffeelint": "0.0.7",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-karma": "^2.0.0",
-    "jasmine-core": "^2.3.4",
-    "karma": "^2.0.2",
-    "karma-coverage": "^0.2.6",
-    "karma-failed-reporter": "0.0.2",
-    "karma-jasmine": "^1.1.2",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-spec-reporter": "0.0.13",
-    "monaco-editor": "^0.13.1"
+    "coveralls": "^3.0.2",
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.3.1",
+    "grunt-coffeelint": "0.0.16",
+    "grunt-contrib-coffee": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-karma": "^3.0.0",
+    "jasmine-core": "^3.2.1",
+    "karma": "^3.0.0",
+    "karma-coverage": "^1.1.2",
+    "karma-failed-reporter": "0.0.3",
+    "karma-jasmine": "*",
+    "karma-phantomjs-launcher": "*",
+    "karma-spec-reporter": "0.0.32",
+    "monaco-editor": "^0.14.3"
   },
   "scripts": {
     "test": "grunt test",
