add chrome as launcher in order to have es6 running properly instead of arma-phantom-launcher. However, there is still a single, failing integration test 'Uses defaultText to initialize the pad properly'

--- a/bower.json
+++ b/bower.json
@@ -38,11 +38,11 @@
     "changelog.txt"
   ],
   "dependencies": {
-    "jsdom": "3.x",
-    "firebase": "3.x.x"
+    "jsdom": "*",
+    "firebase": "5.x.x"
   },
   "devDependencies": {
-    "jasmine-core": "2.3.4",
+    "jasmine-core": "3.x.x",
     "codemirror": "5.x.x"
   }
 }
