--- a/package.json
+++ b/package.json
@@ -50,15 +50,15 @@
     "grunt-contrib-coffee": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^4.0.0",
+    "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-karma": "^3.0.0",
     "jasmine-core": "^3.2.1",
     "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-failed-reporter": "0.0.3",
     "karma-jasmine": "*",
-    "karma-phantomjs-launcher": "*",
     "karma-spec-reporter": "0.0.32",
     "monaco-editor": "^0.14.3"
   },
