remove references to apiKey; add dist back to gitignore; fix merge conflict in travis.yml; and update packages in package.json to include version numbers

--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,7 @@
     "changelog.txt"
   ],
   "dependencies": {
-    "jsdom": "*",
+    "jsdom": "^12.2.0",
     "firebase": "5.x.x"
   },
   "devDependencies": {
