--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "package.json"
   ],
   "dependencies": {
-    "firebase": "*",
+    "firebase": "^5.5.5",
     "jsdom": "^12.2.0"
   },
   "devDependencies": {
@@ -58,7 +58,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-failed-reporter": "0.0.3",
-    "karma-jasmine": "*",
+    "karma-jasmine": "^1.1.2",
     "karma-spec-reporter": "0.0.32",
     "monaco-editor": "^0.14.3"
   },
