--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "package.json"
   ],
   "dependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
     "firebase": "^5.5.5",
     "jsdom": "^12.2.0"
   },
