--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,9 @@ script:
 - npm run travis
 after_script:
 - cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+deploy:
+  provider: npm
+  script: "npm publish"
+  skip_cleanup: true,
+  email: "$NPM_EMAIL"
+  api_key: "$NPM_TOKEN"
