--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
+    "codemirror": "^5.50.2",
     "coveralls": "^3.0.2",
     "grunt": "^1.0.3",
     "grunt-cli": "^1.3.1",
