--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -35,5 +35,8 @@ jobs:
       - name: Run tests
         run: npm run travis
 
-      - name: Report coverage
-        run: cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./test/coverage/lcov.info
