--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "collaborative"
   ],
   "main": "dist/firepad.min.js",
+  "types": "index.d.ts",
   "files": [
     "dist/**",
     "LICENSE",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
+    "@types/codemirror": "^5.60.2",
     "codemirror": "^5.52.2",
     "coveralls": "^3.0.11",
     "grunt": "^1.1.0",
